--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+profile_image: dp.jpg
 
 
 icon: 🤓 # the emoji used as the favicon
@@ -49,9 +50,12 @@ max_width: 800px
 # Open Graph & Schema.org
 # -----------------------------------------------------------------------------
 # Display links to the page with a preview object on social media.
-serve_og_meta: false # Include Open Graph meta tags in the HTML head
-serve_schema_org: false # Include Schema.org in the HTML head
-og_image: # The site-wide (default for all links) Open Graph preview image
+serve_og_meta: true # Include Open Graph meta tags in the HTML head
+serve_schema_org: true # Include Schema.org in the HTML head
+og_image: https://dhruveshp.com/assets/img/blog_logo.png # The site-wide (default for all links) Open Graph preview image
+og_article_layouts:
+  - post
+  - distill
 
 # -----------------------------------------------------------------------------
 # Social integration
@@ -68,11 +72,12 @@ quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: #Dhruvesh-Patel-6 # your profile on ResearchGate
 blogger_url: # your blogger URL
-work_url: https://iesl.umass.edu # work page URL
+work_url: #https://iesl.umass.edu # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
-stackoverflow_id: 5299351/zanylytical-scientist #your stackoverflow id
+stackoverflow_id: #5299351/zanylytical-scientist #your stackoverflow id
+cv: https://drive.google.com/file/d/1Z8u4_wnQiLDkyiV361f-kGfxHpb6NQCE/view
 
 contact_note: >
   I am always on the lookout for interesting conversations and fruitful collaborations. Feel free to use my email to reach out.
