Updated about me section

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,9 @@
+Dangati:
+  - firstname: ["Pavitra", "Sai Pavitra"]
+    url: https://www.linkedin.com/in/sai-pavitra-dangati/
+Lee:
+  - firstname: ["Jay-Yoon", "Jay Yoon"]
+    url: https://leejayyoon.github.io/
 Dasgupta:
   - firstname: ["Shib Sankar", "Shib"]
     url: https://ssdasgupta.github.io
