--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 profile_image: dp.jpg
-icon: /assets/img/icon.png # the emoji used as the favicon
+icon: icon.png # the emoji used as the favicon
 
 icon_image: /assets/img/icon.png
 url: https://dhruveshp.com # the base hostname & protocol for your site
