--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
 profile_image: dp.jpg
 icon: icon.png # the emoji used as the favicon
 
-icon_image: /assets/img/icon.png
+icon_image: icon.png
 url: https://dhruveshp.com # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
