--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ keywords: personal-website # add your own keywords or leave empty
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # for github-metadata plugin
-repository: dhruvdcoder/dhruvdcoder.github.io
+#repository: dhruvdcoder/dhruvdcoder.github.io
 
 # -----------------------------------------------------------------------------
 # Theme
