--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 blog_name: The zanylytical scientist # your blog must have a name for it to show up in the nav bar
 blog_description: math, machine learning, natural language processing, productivity tools and hacks.
 blog_logo: /assets/img/blog_logo.png
-blog_logo_dark: /assets/img/blog_logo_cyan.png
+blog_logo_dark: /assets/img/blog_logo_cyan.png # use /assets/img/blog_logo_cyna.png if you enable dark mode
 blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
 permalink: /blog/:year/:title/
 
@@ -400,7 +400,7 @@ enable_math: true # enables math typesetting (uses MathJax)
 enable_tooltips:
   false # enables automatic tooltip links generated
   # for each section titles on pages and posts
-enable_darkmode: true # enables switching between light/dark modes
+enable_darkmode: false # enables switching between light/dark modes
 enable_navbar_social:
   false # enables displaying social links in the
   # navbar on the about page
