--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -4,3 +4,40 @@
 
 "PhysRev":
   url: https://journals.aps.org/
+
+"ICCV":
+  url: https://www.thecvf.com/
+  color: "#00b300" # Green color for CV conferences is code
+
+"EMNLP":
+  url: https://aclanthology.org/venues/emnlp/
+  color: "#0000ff" # slight dark blue but not too dark blue
+
+"ACL":
+  url: https://aclanthology.org/venues/acl/
+  color: "#0000ff" # Code for coral color
+
+"NAACL":
+  url: https://aclanthology.org/venues/naacl/
+  color: "#0000ff" # Code for coral color
+
+"COLING":
+  url: https://aclanthology.org/venues/coling/
+  color: "#0000ff" # Code for coral color
+
+"ICML":
+  url: https://icml.cc/
+  color: "#ff7f50" # Code for coral color
+
+"NeurIPS":
+  url: https://nips.cc/
+  color: "#ff7f50" # Code for coral color
+
+"ICLR":
+  url: https://iclr.cc/
+  color: "#ff7f50" # Code for coral color
+
+"AKBC":
+  url: https://akbc.ws/
+  color: "#b28080" # AKBC, KDD, WW, etc.
+
